--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-605e95c-20241015",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.25.7",
     "file-loader": "^6.2.0",
     "react-router-dom": "^6.26.2"
   }
