--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.7",
     "babel-plugin-react-compiler": "^0.0.0-experimental-605e95c-20241015",
     "bootstrap": "^5.3.3",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.25.7",
+    "@types/lodash": "^4.17.10",
     "file-loader": "^6.2.0",
     "react-router-dom": "^6.26.2"
   }
